# Raycasters

./: README.md  backup.cpp
01.1-Basic/: CMakeLists.txt  main.cpp
01.1-Basic/src/: LEditor.cpp
01.3-BasicV2/: main.cpp
01.3-BasicV2/src/: LTextures.cpp
02-FrameRates/: build-linux.sh  build.sh
03-BiggerLevel/: main.cpp
04-Floor/: a.out  main.cpp
06-Lighting/: main.cpp
07-Ceiling/: CMakeLists.txt  main.cpp
07-Ceiling/src/: LTexture.cpp
1.2-Editor/: CMakeLists.txt  main.cpp
1.2-Editor/src/: LEditor.cpp  LEditor.h
Basic/: CMakeLists.txt  a.out  build-linux.sh  hw.cpp  main.cpp
Basic/SDL/: SDL_config.h
BiggerLevel/: LTimer.cpp  LTimer.h  a.out  build-linux.sh  main.cpp
FrameRates/: a.out  main.cpp
Kiss_test/: CMakeLists.txt  main.cpp
Kiss_test/src/: LEditor.cpp  LEditor.h  LTextures.cpp  LTextures.h
Papers/: 07.fdb_latexmk  07.fls  07.tex  Raycaster.tex
Raycaster/Raycaster/: main.cpp
Raycaster/Raycaster.xcodeproj/: project.pbxproj
Raycaster/Raycaster.xcodeproj/project.xcworkspace/xcuserdata/saml.xcuserdatad/: UserInterfaceState.xcuserstate
Raycaster/Raycaster.xcodeproj/xcuserdata/saml.xcuserdatad/xcschemes/: xcschememanagement.plist
new/: CMakeLists.txt  main.cpp
new/src/: LEditor.cpp  LEditor.h  LEntity.cpp  LEntity.h  LGameManager.cpp  LGameManager.h  LPlayer.cpp  LPlayer.h  LSettings.cpp  LSettings.h  LTextures.cpp  LTextures.h
old/01.1-Basic/: CMakeLists.txt  main.cpp
old/02-FrameRates/: a.out
old/04-Floor/: main.cpp
old/05-Warp[Bonus]/: a.out  main.cpp
old/06-Lighting/: LTimer.cpp  a.out
old/07-Ceiling/src/: LTexture.h
old/1.2-Editor/: CMakeLists.txt  main.cpp
p5/: Improved Code.js  main.js
tmp/: a.out  main.cpp
